src/snapshots/nixfmt_rs__ir_format_tests__empty_parameter_multiline.snap
---
source: src/ir_format_tests.rs
description: "{\n\n}: x"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Group RegularG
        [0;93;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m{[0m[0;97;1m"[0m
        [0;93;1m,[0m Spacing Emptyline
        [0;93;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m}[0m[0;97;1m"[0m
        [0;93;1m][0m
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m:[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mx[0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
