src/snapshots/nixfmt_rs__ir_format_tests__lambda_chain_structure.snap
---
source: src/ir_format_tests.rs
description: "a: b: c: d: body"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Spacing Break
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1ma:[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Hardspace
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mb:[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Hardspace
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mc:[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Hardspace
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1md:[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Hardline
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mbody[0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
