src/snapshots/nixfmt_rs__ir_format_tests__member_check_full.snap
---
source: src/ir_format_tests.rs
description: attrs ? foo.bar
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mattrs[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m?[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Hardspace
    [0;96;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mfoo.bar[0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
