src/snapshots/nixfmt_rs__ir_format_tests__multiline_string_structure.snap
---
source: src/ir_format_tests.rs
description: "''\n  line1\n  line2\n''"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m''[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Break
    [0;96;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mline1[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing
        [0;93;1m([0m Newlines [0;92;1m1[0m [0;93;1m)[0m
    [0;96;1m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mline2[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing
        [0;93;1m([0m Newlines [0;92;1m1[0m [0;93;1m)[0m
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m''[0m[0;97;1m"[0m
    [0;96;1m][0m
[0;95;1m][0m
